modified color depending the type (special characters or numbers) in the password

--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
 
   <body>
     <div class="app">
-      <input
-        type="text"
-        id="password-output"
-        value=" Votre mot de passe"
-        readonly
-      />
+      <h1  id="password-result"></h1>
 
       <section id="password-actions">
         <button id="btn">Generate Password</button>
