add the 'copy password' feature

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
   <body>
     <div class="app">
-      <h1  id="password-result"></h1>
+      <h1  id="password-result">Click on "Generate Password" !</h1>
 
       <section id="password-actions">
-        <button id="btn">Generate Password</button>
-        <button>Copy Password</button>
+        <button id="btnPwd">Generate Password</button>
+        <button id="btnCopy">Copy Password</button>
       </section>
 
       <section id="password-kind">
@@ -23,8 +23,9 @@
           <label for="Password">Password</label>
         </div>
         <div>
-          <input type="checkbox" name="Passphrase" id="passphrase-selected" disabled="disabled/>
-          <label for="passphrase">Passphrase (Soon !)</label>
+          <input type="checkbox" name="Passphrase" id="passphrase-selected" disabled="disabled"/>
+          <label for= "passphrase" >Passphrase</label>
+          <span class="soon">SOON !</span>
         </div>
       </section>
 
@@ -64,15 +65,15 @@
       <section id="password-additional-properties">
         <div class="properties additional-properties">
           <span>Minimum Numbers</span>
-          <span>Soon !</span>
+          <span class="soon">SOON !</span>
         </div>
         <div class="properties additional-properties">
           <span>Minimum Special</span>
-          <span>Soon !</span>
+          <span class="soon">SOON !</span>
         </div>
         <div class="additional-properties">
           <span>Avoid Ambiguous Characters</span>
-          <span>Soon !</span>
+          <span class="soon">SOON !</span>
         </div>
       </section>
     </div>
